Fixes overlap of Date separator in RHS (#8834)
Automatic Merge

--- a/sass/components/_post-right.scss
+++ b/sass/components/_post-right.scss
@@ -31,6 +31,14 @@
                 }
             }
         }
+
+        .Separator {
+            padding-top: 15px;
+
+            & + .post {
+                padding-top: 20px;
+            }
+        }
     }
 
     .help__format-text {
